--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="utf-8">
   <base href="/">
-
+  <!--
+  Responsive Meta Tag
+  https://css-tricks.com/snippets/html/responsive-meta-tag/
+  -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--
+  Roboto Google Fonts
+  https://fonts.google.com/specimen/Roboto
+  -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
