--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,26 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <base href="/">
-  <!--
-  Responsive Meta Tag
-  https://css-tricks.com/snippets/html/responsive-meta-tag/
-  -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!--
-  Roboto Google Fonts
-  https://fonts.google.com/specimen/Roboto
-  -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <meta charset="utf-8">
+    <base href="/">
+    <!--
+    Responsive Meta Tag
+    https://css-tricks.com/snippets/html/responsive-meta-tag/
+    -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--
+    Favicons
+    https://css-tricks.com/favicon-quiz/
+    Current favicon is took from http://fa2png.io/r/icomoon-free/compass2/
+    -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!--
+    Roboto Google Fonts
+    https://fonts.google.com/specimen/Roboto
+    -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
