--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     https://fonts.google.com/specimen/Roboto
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="./node_modules/leaflet/dist/leaflet.css">
 </head>
 <body>
 <app-root></app-root>
