Added geocoding plugin to Leaflet library
Added leaflet-geosearch plugin (https://github.com/smeijer/leaflet-geosearch) for geosearching to sight page.

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,12 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
+    <!--
+    Leaflet Geosearch styles
+    https://github.com/smeijer/leaflet-geosearch
+    -->
+    <link  href="https://unpkg.com/leaflet-geosearch@latest/assets/css/leaflet.css" rel="stylesheet" />
+
 </head>
 <body>
 <app-root></app-root>
